fix fdr upload document